add pushUp & lk-data end

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -36,6 +36,11 @@ PageList:
 - file: lk-favorits.html
   ready: 50
   desc : ЛК избраное
+  desc : ЛК заказы
+  
+- file: lk-data.html
+  ready: 50
+  desc : ЛК личные данные
 
   #404
 - file: 404.html
