--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "gulp build --production",
     "start": "gulp",
     "precommit": "lint-staged",
-    "lint": "eslint --ignore-pattern 'src/libs/' --cache --format=node_modules/eslint-formatter-pretty src/js/",
+    "lint": "eslint --ignore-pattern 'src/libs/' .eslint --cache --format=node_modules/eslint-formatter-pretty src/js/",
     "lint-fix": "npm run lint -- --fix"
   },
   "lint-staged": {
