--- a/.eslintrc
+++ b/.eslintrc
@@ -9,10 +9,10 @@
     "rules": {
         "no-undef": 1,
         "no-unused-vars": 1,
-        "eqeqeq": [
-            2,
-            "smart"
-        ],
+        // "eqeqeq": [
+        //     2,
+        //     "smart"
+        // ],
         "no-floating-decimal": 2,
         "no-multi-spaces": [
             2,
