--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
 	//   "editor.formatOnSave": true,
-	"eslint.autoFixOnSave": true
+	"eslint.autoFixOnSave": true,
+	"css.lint.emptyRules": "ignore",
+	"scss.lint.emptyRules": "ignore",
+	"css.lint.zeroUnits": "warning",
+	"scss.lint.zeroUnits": "warning",
+	"files.trimTrailingWhitespace": true,
+	"html.format.wrapAttributes": "force-aligned",
+	
 }
