--- a/.editorconfig
+++ b/.editorconfig
@@ -2,26 +2,32 @@
 root = true
 
 [*]
-indent_style = tab
-indent_size = 4
+indent_style = space
+indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
 
+[*.html, .nj]
+indent_style = tab
+indent_size = 4
+
 [*.js]
 indent_style = space
-# indent_size = 4
+indent_size = 4
 
 [*.scss]
-# indent_size = 4
+indent_style = tab
+indent_size = 4
 
 [*.sass]
-# indent_size = 4
+indent_style = tab
+indent_size = 4
 
 [*.sss]
-indent_size = 4
 indent_style = tab
+indent_size = 2
 
 [*.pug]
 indent_size = 4
