--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,13 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
 
-[*.html, .nj]
+[{*.html, *.nj}]
 indent_style = tab
 indent_size = 4
 
