--- a/.eslintrc
+++ b/.eslintrc
@@ -30,20 +30,10 @@
                 "VariableDeclarator": 1
             }
         ],
-        "quotes": [
-            2,
-            "single",
-            "avoid-escape"
-        ],
-        "semi": [
-            2,
-            "always"
-        ],
+        "quotes": [2, "single", "avoid-escape"],
+        "semi": [2, "always"],
         "space-before-blocks": 2,
-        "space-before-function-paren": [
-            2,
-            "never"
-        ],
+        "space-before-function-paren": [2, "never"],
         "constructor-super": 2,
         "arrow-spacing": 2
     }
