fix accordeon to slide & fix catalog script color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "scss.lint.emptyRules": "ignore",
     "css.lint.zeroUnits": "warning",
     "scss.lint.zeroUnits": "warning",
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    "html.format.wrapAttributes": "force-aligned"
 }
