bix tamplate fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
     "css.lint.zeroUnits": "warning",
     "scss.lint.zeroUnits": "warning",
     "files.trimTrailingWhitespace": true,
-    "html.format.wrapAttributes": "force-aligned"
+//     "html.format.wrapAttributes": "force-expand-multiline"
 }
